# tensorflow-linear-logstic-softmax

./: FC-layer.py  README.md  multi-linear.py  multi-logstic.py  pyproject.toml  simple-linear.py  simple-logstic.py  softmax.py  xor.py
tests/: test_tensorflow_layer.py
