[tool.poetry]
name = "tensorflow-layer"
version = "0.1.0"
description = ""
authors = ["pjt3591oo <pjt3591oo@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
numpy = "^1.22.3"
pandas = "^1.4.1"
tensorflow = "^2.8.0"
matplotlib = "^3.5.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
